# fishtools

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CodebookWorkflow.md  Dockerfile  LICENSE  ProbeWorkflow.md  README.md  batch.py  environment-cellpose.yml  environment.yml  environment_rsc_rapids_25.04.yml  get_idt.py  pyproject.toml  todax.py  tojp2.py
.github/workflows/: test.yml
data/: bcparse.py  headerfooter.csv
decode/: align.py  align_prod.py  barden.py  basic.py  batch.py  batchalign.py  batchdeconv.py  channels.toml  collapse3.py  count.py  deconv.py  find_deconv_range.py  flatten.py  register.py  register_prod.py  rename.py  spill.py  stitch.ijm  subtract.py
decode/psf/: fit_gaussian.py
fishtools/: __init__.py  cli.py  deconv.py  postproc3d.py  postprocess.py  utils.py
fishtools/analysis/: chromatic.py  deconv.py  fiducial.py  io.py  labelimage.py  registration.py  schema.py  spots.py  tileconfig.py
fishtools/compress/: todax.py  tojxl.py
fishtools/compression/: compression.py
fishtools/ext/: external_data.py  prepare.py
fishtools/gpu/: codebook.py  memory.py
fishtools/io/: codebook.py  image.py  io.py  pretty_print.py  workspace.py
fishtools/mkprobes/: __init__.py  alignment.py  candidates.py  cli.py  constants.py  definitions.py  gene_selection.py  mkprobes.py  screen.py
fishtools/postprocess/: __init__.py  cli.py  cli_concat.py  cli_intensity.py  concat_config.py  concat_example.toml  concat_pipeline.py  intensity_config.py  intensity_example.toml  intensity_pipeline.py  io_concat.py  plot_h5ad.py  subtraction.py  utils_h5ad.py
fishtools/preprocess/: addition.py  basic.py  chromatic.py  cli.py  cli_basic.py  cli_check_deconv.py  cli_check_shifts.py  cli_check_stitch.py  cli_correct_illum.py  cli_deconv.py  cli_deconv_multi.py  cli_deconv_old.py  cli_inspect.py  cli_register.py  cli_register_migrated.py  cli_spotlook.py  cli_stitch.py  cli_verify.py  config.py  config_loader.py  config_validator.py  deconv.py  downsample.py  fiducial.py  illumination.py  illumination_apply.py  imagej.py  imageops.py  n4.py  plot.py  processing_context.py  projection.py  segmentation.py  stitching.py  test_cli_basic.py  test_tileconfig.py  tileconfig.py
fishtools/queuing/: client.py  server.py
fishtools/segment/: __init__.py  augment.py  cp_io.py  data_discovery.py  distill.py  export.py  extract.py  normalize.py  overlay_intensity.py  overlay_spots.py  postproc3d.py  profile_postproc3d.py  run.py  test_train.py  train.py  train_rp.py  utils.py
fishtools/segmentation/: concat.py  overlay_intensity.py  profile_postproc3d.py  submit.fish
probegen/: 0_codebook.py  1_run_codebook.py  1_run_codebook_generic.py  2_assemble_manifest.py  adt.py  cs.py  foridt.py  o_codebook.py  simulate.py  test_0_codebook.py
qc/: check_shifts.py  look.py
scripts/: batch.py  cellpos.py  dartstitch.py  figure.py  generate_synthetic_stitch_data.py  headerprimers.tsv  maxproj.py  maxprojdapi.py  prep_files_merlin.py  register_simple.py  starmap.py  stitch.py  stitch_spot.py  stitch_spot_simple.py  sub.py  subtract_blank.py  test_cli_deconv_torch_parity.py
segmentation/: cellpos_make3dtrain.py  cellpos_run.py  cellpos_run_2d.py  cellpos_stitch.py  cellpos_train.py  distributed_segmentation.py  environment.yml  extract.py  extract_psf.py  overlay_spots.py  overlay_spots_combi.py  overlay_spots_contour.py  simple_spots.py
seq_generator/: Cargo.toml
starwork/: simulate.py  tri_assemble.py
starwork2/: alz.py  check_low.py  coding.py  conflict_check.py  cs.py  genes.py  genestar_assembl.py  gett.py  simulate.py
starwork4/: cs.py  genes.py  genestar_assembl.py  makeheader.py  simulate.py
static/: 10bit_on2_dist2.csv  10bit_on3_dist2.csv  10x.csv  10xhuman.csv  11bit_on2_dist2.csv  11bit_on3_dist2.csv  12bit_on2_dist2.csv  12bit_on3_dist2.csv  13bit_on2_dist2.csv  13bit_on3_dist2.csv  14bit_on2_dist2.csv  14bit_on3_dist2.csv  15bit_on2_dist2.csv  15bit_on3_dist2.csv  16bit_on2_dist2.csv  16bit_on3_dist2.csv  17bit_on2_dist2.csv  17bit_on3_dist2.csv  18bit_on2_dist2.csv  18bit_on3_dist2.csv  19bit_on2_dist2.csv  19bit_on3_dist2.csv  20bit_on3_dist2.csv  21bit_on3_dist2.csv  22bit_on3_dist2.csv  23bit_on3_dist2.csv  24bit_on3_dist2.csv  25bit_on3_dist2.csv  26bit_on3_dist2.csv  26bit_on4_dist2.csv  27bit_on3_dist2.csv  28bit_on3_dist2.csv  29bit_on3_dist2.csv  30bit_on3_dist2.csv  8bit_on3_dist2.csv  9bit_on3_dist2.csv  MHD2_10bits.csv  MHD2_11bits.csv  MHD2_12bits.csv  MHD2_13bits.csv  (+15 more)
test/: _cellpose_stub.py  conftest.py  synthetic_fiducials.py  test_affine_gpu_regression.py  test_align_batchoptimize_cli.py  test_align_prod_find_threshold.py  test_align_prod_imagestack.py  test_align_prod_real.py  test_align_prod_units.py  test_backend_factory_pickleable.py  test_basic.py  test_batch_roi.py  test_calculate_drift_and_handle_exception.py  test_cli_calculate_percentiles.py  test_cli_correct_illum.py  test_cli_correct_illum_render_global.py  test_cli_deconv_basic_selection.py  test_cli_deconv_batch_delete_origin.py  test_cli_deconv_compute_range.py  test_cli_deconv_multi.py  test_cli_deconv_run_delete_origin.py  test_cli_export_field.py  test_cli_export_field_multi.py  test_cli_prepare_e2e.py  test_cli_register.py  test_cli_register_memory_cleanup.py  test_cli_register_run_skip_condition.py  test_cli_register_typer.py  test_cli_spotlook.py  test_cli_stitch.py  test_cli_stitch_combine_channels.py  test_cli_stitch_config.py  test_cli_stitch_e2e_field.py  test_cli_stitch_memory_cleanup.py  test_cli_stitch_n4.py  test_cli_verify.py  test_compress.py  test_deconv_core.py  test_deconv_dispatcher_waits.py  test_distributed_segmentation_cache.py  (+47 more)
useful/: README.md  align_batchoptimize.py  align_look.py  align_percentile.py  align_prod.py  align_prod_gpu.py  basic.py  batchdeconv.py  bigrun.py  create_baysor.py  extract_logs.py  process_image.py  qc_check_shifts.py  register_genmaster.py  register_prod.py  register_protein.py  rename.py  stitch.py  stitch_look.py  stitch_spot.py  stitch_spot_look.py  stitch_spot_prod.py  subtract.py  to_ficture.py
(+84 files in other folders)
