[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fishtools"
version = "0.1.0"
description = ""
authors = [{ name = "Chaichontat Sriworarat", email = "csriwor1@jh.edu" }]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.84",
    "click>=8.1.1",
    "colorama>=0.4.6",
    "imagecodecs>=2025.8.2",
    "levenshtein>=0.27.1",
    "loguru>=0.7.0",
    "mygene>=3.2.2",
    "numpy>=1.25.1",
    "polars>=1.32.3",
    "primer3-py>=2.2.0",
    "pyfastx>=2.1.0",
    "rich-click>=1.8.9",
    "tifffile",
    "tqdm>=4.65.0",
    "matplotlib",
    "seaborn>=0.13.2",
    "astropy>=6.1.0",
    "photutils>=1.12.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
    "basicpy>=1.2.0",
    "rtree>=1.4.1",
    "shapely>=2.1.1",
    "toml>=0.10.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "starfish @ git+https://github.com/chaichontat/starfish@master",
    "prefect>=3",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[project.scripts]
fishtools = "fishtools.cli:main"
mkprobes = "fishtools.mkprobes.cli:main"
preprocess = "fishtools.preprocess.cli:main"
segment = "fishtools.segment:main"

[tool.uv]
override-dependencies = ["scikit-image>=0.23.2", "scipy>=1.16.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 110
target-version = ['py312']

[tool.pyright]
include = ["fishtools"]
pythonVersion = "3.12"
reportMissingTypeAnnotation = "warning"
reportMissingTypeStubs = false
reportPrivateUsage = false
reportPropertyTypeMismatch = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = "none"
reportUntypedFunctionDecorator = false
reportUnusedImport = false
reportMissingTypeArgument = "none"
reportUnusedVariable = false
typeCheckingMode = "strict"

[tool.ruff]
lint.ignore = ["E501", "E731", "E713"]
line-length = 110

[tool.isort]
line_length = 110
profile = "black"
py_version = 312
src_paths = ["fishtools"]

[tool.pytest.ini_options]
# addopts = "--cov=fishtools --cov-report=html --cov-report=xml"
log_cli = true
# log_cli_level = "DEBUG"
minversion = "7.0"

[tool.bandit]
exclude = "test"
skips = ["B101", "B404", "B603", "B607"]
targets = "fishtools"

[tool.codespell]
skip = 'scripts/'

[tool.pyupgrade]
py312-plus = true
